--- a/1.html
+++ b/1.html
@@ -12,7 +12,19 @@
         <div class="header-image">
             <h1>Distributed Renewable Energy Trading Platform</h1>
         </div>
+        <nav>
+            <ul>
+                <li><a href="#overview">Overview</a></li>
+                <li><a href="#marketplace">Marketplace</a></li>
+                <li><a href="#transactions">Transactions</a></li>
+                <li><a href="#profile">User Profile</a></li>
+                <li><a href="#how-it-works">How It Works</a></li>
+                <li><a href="#video">Video</a></li>
+                <li><a href="#faqs">FAQs</a></li>
+            </ul>
+        </nav>
     </header>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2023 Distributed Renewable Energy Trading Platform. All rights reserved.</p>
