adding main section with image

--- a/1.html
+++ b/1.html
@@ -25,6 +25,18 @@
         </nav>
     </header>
 
+    <!-- Main Content -->
+    <main>
+        <!-- Overview Section with Image -->
+        <section id="overview">
+            <h2>Platform Overview</h2>
+            <div class="section-content">
+                <img src="images/overview.jpeg" alt="Overview of renewable energy" class="content-image">
+                <p>Welcome to the Distributed Renewable Energy Trading Platform. Here you can trade renewable energy credits and track real-time energy metrics.</p>
+            </div>
+        </section>
+    </main>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2023 Distributed Renewable Energy Trading Platform. All rights reserved.</p>
